верстка блоков index.html / WIP

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -16,11 +16,11 @@
 }
 
 .header__image-wrapper {
-  background-image: url('../../img/hero-mobile@1x.jpg');
+  background-image: url("../../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: 50%;
 
-  width: 322px;
+  width: 100%;
   height: 280px;
 
   display: flex;
