--- a/source/sass/abstracts/variables.scss
+++ b/source/sass/abstracts/variables.scss
@@ -1,6 +1,15 @@
 // colors
+$white: #ffffff;
 $white-four: #ececec;
+$white-two: #f1f1f1;
+
+$black-three: #000000;
+
 $very-dark-brown: #010000;
+
+$greyish-brown: #444444;
+
+$seafoam-blue: #63d1bb;
 
 // fonts
 $default-font-family: OpenSans, Helvetica, sans-serif;
