--- a/source/sass/blocks/products-list.scss
+++ b/source/sass/blocks/products-list.scss
@@ -9,11 +9,10 @@
   flex-direction: column;
 
   margin-bottom: 30px;
-  box-sizing: border-box;
 }
 
 .product-card__image-wrapper {
-
+  font-size: 0;
 }
 
 .product-card__title {
