--- a/source/sass/abstracts/variables.scss
+++ b/source/sass/abstracts/variables.scss
@@ -13,10 +13,9 @@ $greyish-brown: #444444;
 $seafoam-blue: #63d1bb;
 
 // fonts
-$default-font-family: OpenSans, Helvetica, sans-serif;
+$default-font-family: opensans, helvetica, sans-serif;
 
 $default-font-weight: 300;
-$font-weight-bold: 600;
 
 $default-font-color: #444444;
 $default-font-size: 15px;
