--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -15,7 +15,7 @@
 
   background: transparent;
   border: 0;
-  background-image: url('../../img/icon-menu-open.svg');
+  background-image: url("../../img/icon-menu-open.svg");
   background-repeat: no-repeat;
   background-position: 50%;
 }
