--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -8,8 +8,8 @@
 
 .features__title {
   font-size: 25px;
-  font-weight: 600;
+  font-weight: $font-weight-bold;
 
   line-height: 1.2;
-  color: $black-three;
+  color: $black;
 }
