--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -4,10 +4,10 @@
 
 .reviews__title {
   font-size: 25px;
-  font-weight: 600;
+  font-weight: $font-weight-bold;
 
   line-height: 1.2;
-  color: $black-three;
+  color: $black;
 }
 
 .reviews__list {
@@ -18,11 +18,11 @@
 
 .reviews__author {
   font-size: 17px;
-  font-weight: 600;
+  font-weight: $font-weight-bold;
 
   line-height: 1.41;
 
-  color: $black-three;
+  color: $black;
 }
 
 .reviews__username {
