--- a/source/sass/base/layout.scss
+++ b/source/sass/base/layout.scss
@@ -2,8 +2,21 @@ body {
   margin: 0;
   padding: 0;
 
-  font-family: $default-font-family;
-  font-weight: $default-font-weight;
-  color: $default-font-color;
-  font-size: $default-font-size;
+  font-family: $font-family-default;
+  font-weight: $font-weight-default;
+  color: $font-color-default;
+  font-size: $font-size-default;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+a {
+  text-decoration: none;
 }
