--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -8,7 +8,7 @@
   text-decoration: none;
   text-align: center;
   text-transform: uppercase;
-  font-weight: 600;
+  font-weight: $font-weight-bold;
 
   padding: 20px 0;
   vertical-align: middle;
