--- a/source/sass/blocks/categories.scss
+++ b/source/sass/blocks/categories.scss
@@ -4,16 +4,18 @@
 
 .categories__item {
   width: 100%;
-  height: 103px;
+
+  padding: 29px 0 29px 29px;
 
   background-color: $seafoam-blue;
 
   font-size: 19px;
-  font-weight: 600;
+  font-weight: $font-weight-bold;
   line-height: 1.26;
-  letter-spacing: normal;
 
   a {
+    display: inline-block;
     color: $white;
+    max-width: 106px;
   }
 }
