--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,12 +1,11 @@
-.main-nav__list {
-  display: none;
+.main-nav {
+  width: 100%;
 }
 
 .main-nav__toggle {
   position: absolute;
   right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 16px;
 
   width: 50px;
   height: 50px;
