--- a/source/sass/base/typography.scss
+++ b/source/sass/base/typography.scss
@@ -2,12 +2,12 @@
   font-family: "OpenSans";
   font-style: normal;
   font-weight: 300;
-  src: url("../../fonts/opensans.woff2") format("woff2"), url("../../fonts/opensans.woff") format("woff");
+  src: url("../fonts/opensans.woff2") format("woff2"), url("../fonts/opensans.woff") format("woff");
 }
 
 @font-face {
   font-family: "OpenSans";
   font-style: normal;
   font-weight: 600;
-  src: url("../../fonts/opensansbold.woff2") format("woff2"), url("../../fonts/opensansbold.woff") format("woff");
+  src: url("../fonts/opensansbold.woff2") format("woff2"), url("../fonts/opensansbold.woff") format("woff");
 }
