--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,6 +1,6 @@
 .header {
   &--hero {
-    background-image: url("../../img/hero-mobile@1x.jpg");
+    background-image: url("../img/hero-mobile@1x.jpg");
     background-repeat: no-repeat;
     background-position: 50% 30%;
   }
@@ -26,7 +26,7 @@
 }
 
 .header__image-wrapper {
-  background-image: url("../../img/hero-mobile@1x.jpg");
+  background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: 50%;
 
