правки по ревью: - нейминг цветовых переменных

--- a/source/sass/abstracts/variables.scss
+++ b/source/sass/abstracts/variables.scss
@@ -1,7 +1,7 @@
 // colors
 $white: #ffffff;
-$white-four: #ececec;
-$white-two: #f1f1f1;
+$gray-dark: #ececec;
+$gray-light: #f1f1f1;
 
 $black: #000000;
 $very-dark-brown: #010000;
