--- a/source/sass/blocks/how-its-done.scss
+++ b/source/sass/blocks/how-its-done.scss
@@ -4,7 +4,7 @@
   margin: 0 30px 58px;
   padding-bottom: 33px;
 
-  border: solid 1px $white-four;
+  border: solid 1px $gray-dark;
 }
 
 .how-its-done__image-wrapper {
