--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,8 +1,8 @@
 .button {
   display: inline-block;
 
-  width: 260px;
-  max-width: 100%;
+  width: 100%;
+  max-width: 260px;
 
   font-size: 17px;
   text-decoration: none;
