index, catalog: - закончил mobile вертску недостающих блоков

--- a/source/sass/blocks/how-its-done.scss
+++ b/source/sass/blocks/how-its-done.scss
@@ -11,6 +11,10 @@
   width: 100%;
 }
 
+.how-its-done__image {
+  width: 100%;
+}
+
 .how-its-done__title {
   font-size: 17px;
   font-weight: $font-weight-bold;
