--- a/source/sass/abstracts/mixins.scss
+++ b/source/sass/abstracts/mixins.scss
@@ -1,3 +1,8 @@
+@mixin no-margin-no-padding {
+  margin: 0;
+  padding: 0;
+}
+
 @mixin reset-list {
   margin: 0;
   padding: 0;
@@ -8,4 +13,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@mixin hide-text-content {
+  text-indent: -9999px;
+  white-space: nowrap;
 }
