--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,9 +1,10 @@
 //abstracts
-@import "./abstracts/variables.scss";
-@import "./abstracts/mixins.scss";
+@import "./base/variables.scss";
+@import "./base/mixins.scss";
 
 // base
-@import "./base/layout.scss";
+@import "./base/base.scss";
+@import "./base/utils.scss";
 @import "./base/typography.scss";
 
 // blocks
@@ -17,7 +18,7 @@
 @import "./blocks/how-its-done.scss";
 @import "./blocks/main-nav.scss";
 // @import "./blocks/main.scss";
-// @import "./blocks/order-form.scss";
+@import "./blocks/order-form.scss";
 // @import "./blocks/product-card.scss";
 // @import "./blocks/product-characteristics.scss";
 @import "./blocks/product-of-week.scss";
