sass/ - header, main-nav:  верстка хедера и навигации

--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -15,3 +15,8 @@ $font-color-default: #444444;
 $font-size-default: 15px;
 
 $font-weight-bold: 600;
+
+// sizes
+$tablet-width: 768px;
+$desktop-width: 1200px;
+
