- categories: tablet + desktop

--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -7,6 +7,7 @@ $black: #000000;
 $very-dark-brown: #010000;
 $greyish-brown: #444444;
 $seafoam-blue: #63d1bb;
+$greeny-blue: #56c3b2;
 
 // fonts
 $font-family-default: opensans, helvetica, sans-serif;
