--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -5,6 +5,7 @@
     background-image: url("../img/hero-mobile@1x.jpg");
     background-repeat: no-repeat;
     background-position: 50% 50%;
+    background-size: cover;
   }
 }
 
@@ -53,7 +54,7 @@
       padding: 124px 0 371px;
       background-image: url("../img/hero-tablet@1x.jpg");
       background-position: 50% 50%;
-      min-height: 630px;
+      min-height: 746px;
     }
   }
 
@@ -66,3 +67,16 @@
     align-items: flex-start;
   }
 }
+
+@media (min-width: $desktop-width) {
+  .header__title {
+    &--hero {
+      font-size: 43px;
+      padding: 124px 0 371px;
+      background-image: url("../img/hero-desktop@1x.jpg");
+      background-position: 50% 50%;
+      min-height: 746px;
+    }
+  }
+}
+
