--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -28,6 +28,10 @@
   vertical-align: text-top;
 }
 
+.contacts__button-wrapper {
+  padding: 0 34px;
+}
+
 .contacts__write-us {
   margin-top: 39px;
   margin-bottom: 39px;
