--- a/source/sass/blocks/products-list.scss
+++ b/source/sass/blocks/products-list.scss
@@ -24,12 +24,12 @@
 }
 
 .product-card__title {
-  max-width: 210px;
+  @include no-margin-no-padding;
 
   font-size: 17px;
   font-weight: $font-weight-bold;
 
-  line-height: 1.41;
+  margin-bottom: 15px;
 
   color: $black;
 }
@@ -38,7 +38,7 @@
   display: flex;
   flex-direction: column;
 
-  padding: 12px 0 30px 28px;
+  padding: 12px 32px 30px 28px;
 
   border: solid 1px $gray-dark;
 }
@@ -46,6 +46,17 @@
 .product-card__footer {
   display: flex;
   justify-content: space-between;
+  margin-top: auto;
+}
+
+.product-card__cart {
+  @include fullwidth-centered-background-image;
+
+  width: 21px;
+  height: 18px;
+
+  background-image: url("../img/icon-cart.svg");
+  opacity: 0.2;
 }
 
 @media (min-width: $tablet-width) {
@@ -55,9 +66,23 @@
     margin-bottom: 53px;
   }
 
+  .product-card__title {
+    font-size: 20px;
+    font-weight: $font-weight-bold;
+  }
+
+  .product-card__size {
+    font-size: 15px;
+  }
+
   .products-list__item {
     flex-direction: row;
     min-height: 334px;
+  }
+
+  .product-card__price {
+    font-size: 17px;
+    font-weight: $font-weight-bold;
   }
 
   .product-card__image-wrapper {
@@ -66,6 +91,7 @@
 
   .product-card__info {
     flex-basis: 50%;
+    padding: 29px 32px 32px 28px;
   }
 }
 
