--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,7 +1,7 @@
 .social {
-  min-height: 80px;
-
   padding: 25px 0 27px;
+
+  border-bottom: 2px solid $gray-dark;
 }
 
 .social__list {
@@ -13,5 +13,15 @@
 }
 
 .social__item {
-  margin: 0 20px;
+  margin-right: 40px;
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .social {
+    border: none;
+  }
 }
