--- a/source/sass/blocks/products-list.scss
+++ b/source/sass/blocks/products-list.scss
@@ -97,7 +97,7 @@
 
 @media (min-width: $desktop-width) {
   .products-list {
-    padding: 0 52px;
+    padding: 0 50px;
     margin-top: 111px;
     margin-bottom: 57px;
 
@@ -108,12 +108,21 @@
 
   .products-list__item {
     flex-direction: column;
-    min-height: 334px;
     flex-basis: 316px;
+
+    min-width: 316px;
+    flex-grow: 1;
+
+    margin-right: 52px;
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 
   .product-card__image-wrapper {
     flex-basis: 462px;
+    min-height: 334px;
   }
 
   .product-card__text-container {
