--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,7 +20,7 @@
 // @import "./blocks/main.scss";
 @import "./blocks/order-form.scss";
 // @import "./blocks/product-card.scss";
-// @import "./blocks/product-characteristics.scss";
+@import "./blocks/product-stats.scss";
 @import "./blocks/product-of-week.scss";
 @import "./blocks/products-list.scss";
 @import "./blocks/reviews.scss";
