--- a/source/sass/blocks/product-of-week.scss
+++ b/source/sass/blocks/product-of-week.scss
@@ -16,6 +16,10 @@
   text-transform: uppercase;
 }
 
+.product-of-week__description {
+  line-height: 1.76;
+}
+
 .product-of-week__image {
   width: 100%;
 }
@@ -41,6 +45,9 @@
 @media (min-width: $tablet-width) {
   .product-of-week {
     padding: 34px 50px 0;
+
+    display: flex;
+    flex-direction: column;
   }
 
   .product-of-week__titles {
@@ -57,6 +64,42 @@
   .product-of-week__subtitle {
     width: 70px;
     text-align: center;
+  }
+
+  .product-of-week__description {
+    max-width: 282px;
+    margin: 0 0 54px 0;
+  }
+
+  .product-of-week__content-wrapper {
+    padding-right: calc(50% + 44px);
+
+    display: flex;
+    flex-direction: column;
+
+    position: relative;
+  }
+
+  .product-of-week__image {
+    position: absolute;
+
+    right: 0;
+    top: 0;
+
+    width: 50%;
+    height: 100%;
+
+    object-fit: cover;
+  }
+
+  .product-of-week__buy {
+    align-self: flex-end;
+  }
+
+  .product-of-week__price {
+    font-size: 20px;
+    font-weight: $font-weight-bold;
+    color: $greyish-brown;
   }
 }
 
