--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,7 @@
 @import "./base/typography.scss";
 
 // blocks
+@import "./blocks/video-player.scss";
 @import "./blocks/button.scss";
 @import "./blocks/categories.scss";
 @import "./blocks/contacts.scss";
@@ -17,9 +18,8 @@
 @import "./blocks/header.scss";
 @import "./blocks/how-its-done.scss";
 @import "./blocks/main-nav.scss";
-// @import "./blocks/main.scss";
 @import "./blocks/order-form.scss";
-// @import "./blocks/product-card.scss";
+@import "./blocks/product-card.scss";
 @import "./blocks/product-stats.scss";
 @import "./blocks/product-of-week.scss";
 @import "./blocks/products-list.scss";
