- удалил все закомментированные неиспользуемые блоки кода - удалил  object-fit: cover;

--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -10,7 +10,7 @@ $seafoam-blue: #63d1bb;
 $greeny-blue: #56c3b2;
 
 // fonts
-$font-family-default: opensans, helvetica, sans-serif;
+$font-family-default: "Open Sans", "Helvetica", sans-serif;
 $font-weight-default: 300;
 $font-color-default: #444444;
 $font-size-default: 15px;
