--- a/source/sass/blocks/product-of-week.scss
+++ b/source/sass/blocks/product-of-week.scss
@@ -48,9 +48,7 @@
 
     display: flex;
     flex-direction: column;
-
-    // position: relative;
-  }
+s  }
 
   .product-of-week__titles {
     display: flex;
@@ -90,8 +88,6 @@
 
     width: 50%;
     height: 100%;
-
-    object-fit: cover;
   }
 
   .product-of-week__buy {
@@ -108,8 +104,6 @@
 @media (min-width: $desktop-width) {
   .product-of-week {
     margin: 54px 50px 73px 225px;
-    // margin: 54px 0 74px;
-
     position: relative;
   }
 
