--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -5,8 +5,9 @@
 .header__hero-image {
   background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: cover;
+  background-position: 50% 0;
+  background-size: 100%;
+  min-height: 285px;
 }
 
 .header__logo {
@@ -22,7 +23,7 @@
 
   text-align: center;
 
-  padding: 76px 0 74px;
+  padding: 76px 0 120px;
   margin: 0;
 }
 
@@ -56,12 +57,5 @@
     font-size: 53px;
 
     padding: 105px 0 111px;
-
-    &--hero {
-      padding: 124px 0 371px;
-      background-image: url("../img/hero-desktop@1x.jpg");
-      background-position: 50% 50%;
-      min-height: 746px;
-    }
   }
 }
