--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -48,6 +48,8 @@
   display: flex;
   align-items: center;
 
+  padding: 32px 0 32px 76px;
+
   a {
     font-weight: $font-weight-bold;
     color: $black;
