- features: last-child no margin - reviews - стилизация отзывов - WIP

--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -29,6 +29,10 @@
 
   padding-right: 50px;
 
+  &:last-child {
+    margin-bottom: 0;
+  }
+
   &--eco {
     background-image: url("../img/icon-feature-flower.svg");
   }
