--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,4 +24,5 @@
 @import "./blocks/product-of-week.scss";
 @import "./blocks/products-list.scss";
 @import "./blocks/reviews.scss";
+@import "./blocks/slider.scss";
 @import "./blocks/social.scss";
