--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,5 +1,5 @@
 .reviews {
-  padding: 40px 30px;
+  padding: 27px 31px 45px;
 }
 
 .reviews__title {
@@ -8,6 +8,7 @@
 
   line-height: 1.2;
   color: $black;
+  margin: 0 0 38px 0;
 }
 
 .reviews__list {
@@ -16,16 +17,24 @@
   margin-bottom: 38px;
 }
 
+.reviews__description {
+  font-size: 15px;
+  line-height: 2;
+  color: $greyish-brown;
+  margin: 0 0 40px 0;
+}
+
 .reviews__author {
   font-size: 17px;
   font-weight: $font-weight-bold;
-
-  line-height: 1.41;
-
   color: $black;
+
+  margin: 0 0 5px 0;
 }
 
 .reviews__username {
+  margin: 0;
+
   a {
     color: $greyish-brown;
   }
@@ -35,6 +44,8 @@
   display: flex;
 
   width: 100%;
+
+  margin-bottom: 38px;
 }
 
 .reviews__control {
@@ -60,6 +71,6 @@
 }
 
 .reviews__write {
-  margin-top: 38px;
-  margin-bottom: 45px;
+  // margin-top: 38px;
+  // margin-bottom: 45px;
 }
